# Jupyter-Notebook-Template

./: .gitignore  README.md  pyproject.toml  scripts.py
notebooks/: example.ipynb
src/: __init__.py  utils.py
